@@ -4,11 +4,16 @@ import com.github.milkdrinkers.colorparser.ColorParser;
 import io.github.alathra.alathraskills.AlathraSkills;
 import io.github.alathra.alathraskills.api.SkillsManager;
 import io.github.alathra.alathraskills.skills.Skill;
+import net.kyori.adventure.text.Component;
 import org.bukkit.Material;
+import org.bukkit.Tag;
+import org.bukkit.block.Block;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 
 public class SaveTheTreesSkill extends Skill {
     private SkillsManager skillsManager;
@@ -19,11 +24,34 @@ public class SaveTheTreesSkill extends Skill {
         ItemStack icon = new ItemStack(Material.OAK_SAPLING);
         ItemMeta meta = icon.getItemMeta();
         meta.displayName(ColorParser.of("<green><bold>" + super.getName() + "</green></bold>").build());
-        meta.lore(Collections.singletonList(ColorParser.of("<gray><italics>" + super.getDescription() + "</gray></italics>").build()));
+        meta.lore(List.of(ColorParser.of("<yellow>Level 1</yellow>").build(),
+            ColorParser.of("<red><italics>" + super.getDescription() + "</gray></italics>").build()));
         icon.setItemMeta(meta);
         super.setIcon(icon);
 
         skillsManager = AlathraSkills.getSkillsManager();
         super.setCategory(skillsManager.skillCategories.get(3));
+    }
+
+    public static void runSaveTheTreesSkill(Block eventBlock) {
+        Material blockUnder = eventBlock.getRelative(0, -1, 0).getType();
+        if (!Tag.DIRT.isTagged(blockUnder))
+            return;
+
+        String blockString = eventBlock.getType().toString();
+
+        // Removes "STRIPPED_".
+        if (blockString.contains("STRIPPED"))
+            blockString = blockString.substring(9);
+
+        String[] materialArray = blockString.split("_");
+
+        // Handles dark oak.
+        if (materialArray.length > 2 && materialArray[2] != null)
+            materialArray[0] = materialArray[0].concat("_").concat(materialArray[1]);
+
+        String sapling = materialArray[0].concat("_SAPLING");
+
+        eventBlock.setType(Material.getMaterial(sapling));
     }
 }
